<resources>
    <string name="app_name">Gaelic &amp; Hurling Counter</string>

    <string name="score_default_value">0</string>
    <string name="team_1_default_name">Team 1</string>
    <string name="team_1_default_name_irish">Foirne 1</string>
    <string name="goals_header">Goals</string>
    <string name="points_header">Points</string>
    <string name="increment_button">+</string>
    <string name="team_2_default_name">Team 2</string>
    <string name="team_2_default_name_irish">Foirne 2</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="team_1_colon">Team 1:</string>
    <string name="team_2_colon">Team 2:</string>
    <string name="choose_teams">Choose Teams</string>
    <string name="title_activity_score">Gaelic &amp; Hurling Counter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>