<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pjcribbin.gaelichurlingcounter.ScoreActivity">

    <LinearLayout style="@style/teamOverallStyle">

        <LinearLayout style="@style/teamEdgesStyle">

            <TextView
                style="@style/goalsAndPointsHeaderStyle"
                android:text="@string/goals_header" />

            <TextView
                android:id="@+id/team_1_goals"
                style="@style/goalsAndPointsStyle"
                android:onClick="incrementTeam1Goals" />

        </LinearLayout>

        <LinearLayout style="@style/teamCenterStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <View
                    android:id="@+id/left_colour_team_1"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_weight="1" />

                <View
                    android:id="@+id/right_colour_team_1"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_weight="1" />

            </LinearLayout>


            <TextView
                android:id="@+id/team_1_english_name"
                style="@style/teamNameStyle"
                android:text="@string/team_1_default_name" />

            <TextView
                android:id="@+id/team_1_irish_name"
                style="@style/teamNameIrishStyle"
                android:text="@string/team_1_default_name_irish" />

            <TextView
                android:id="@+id/team_1_score"
                style="@style/overallScoreStyle" />
        </LinearLayout>

        <LinearLayout style="@style/teamEdgesStyle">

            <TextView
                style="@style/goalsAndPointsHeaderStyle"
                android:text="@string/points_header" />

            <TextView
                android:id="@+id/team_1_points"
                style="@style/goalsAndPointsStyle"
                android:onClick="incrementTeam1Points" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#777" />

    <LinearLayout style="@style/teamOverallStyle">

        <LinearLayout style="@style/teamEdgesStyle">

            <TextView
                style="@style/goalsAndPointsHeaderStyle"
                android:text="@string/goals_header" />

            <TextView
                android:id="@+id/team_2_goals"
                style="@style/goalsAndPointsStyle"
                android:onClick="incrementTeam2Goals" />

        </LinearLayout>

        <LinearLayout style="@style/teamCenterStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <View
                    android:id="@+id/left_colour_team_2"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_weight="1" />

                <View
                    android:id="@+id/right_colour_team_2"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/team_2_english_name"
                style="@style/teamNameStyle"
                android:text="@string/team_2_default_name" />

            <TextView
                android:id="@+id/team_2_irish_name"
                style="@style/teamNameIrishStyle"
                android:text="@string/team_2_default_name_irish" />

            <TextView
                android:id="@+id/team_2_score"
                style="@style/overallScoreStyle" />

        </LinearLayout>

        <LinearLayout style="@style/teamEdgesStyle">

            <TextView
                style="@style/goalsAndPointsHeaderStyle"
                android:text="@string/points_header" />

            <TextView
                android:id="@+id/team_2_points"
                style="@style/goalsAndPointsStyle"
                android:onClick="incrementTeam2Points" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>