<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/goals_header"
                android:textAllCaps="true"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/team_1_goals"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score_default_value"
                android:textColor="#000"
                android:textIsSelectable="false"
                android:textSize="75sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_1_goals_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="incrementTeam1Goals"
                android:text="@string/increment_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/team_1_default_name"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/team_1_default_name_irish"
                android:textColor="#555"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_1_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_default_value"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/points_header"
                android:textAllCaps="true"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/team_1_points"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score_default_value"
                android:textColor="#000"
                android:textSize="75sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_1_points_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="incrementTeam1Points"
                android:text="@string/increment_button" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/goals_header"
                android:textAllCaps="true"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/team_2_goals"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score_default_value"
                android:textColor="#000"
                android:textIsSelectable="false"
                android:textSize="75sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_2_goals_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="incrementTeam2Goals"
                android:text="@string/increment_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/team_2_default_name"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/team_2_default_name_irish"
                android:textColor="#555"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_2_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_default_value"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/points_header"
                android:textAllCaps="true"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/team_2_points"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score_default_value"
                android:textColor="#000"
                android:textSize="75sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_2_points_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="incrementTeam2Points"
                android:text="@string/increment_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
